Learned how this keyword works in JS

--- a/module-04/index.html
+++ b/module-04/index.html
@@ -14,8 +14,10 @@
     </style>
 
     <h1>Module 4</h1>
+    <button type="button" id="btn">Subscribe</button>
+    <p id="subscribers">Subscribers: 0</p>
 
-    <script src="./closure.js" type="module"></script>
-    <!-- <script src="./this.js" type="module"></script> -->
+    <!-- <script src="./closure.js" type="module"></script> -->
+    <script src="./this.js" type="module"></script>
   </body>
 </html>
