--- a/module-04/index.html
+++ b/module-04/index.html
@@ -17,7 +17,7 @@
     <button type="button" id="btn">Subscribe</button>
     <p id="subscribers">Subscribers: 0</p>
 
-    <!-- <script src="./closure.js" type="module"></script> -->
-    <script src="./this.js" type="module"></script>
+    <script src="./closure.js" type="module"></script>
+    <!-- <script src="./this.js" type="module"></script> -->
   </body>
 </html>
