--- a/module-05/index.html
+++ b/module-05/index.html
@@ -16,7 +16,7 @@
     <h1>Module 5</h1>
 
     <!-- <script src="prototype.js" type="module"></script> -->
-    <script src="constructor.js" type="module"></script>
-    <!-- <script src="es6-classes.js" type="module"></script> -->
+    <!-- <script src="constructor.js" type="module"></script> -->
+    <script src="es6-classes.js" type="module"></script>
   </body>
 </html>
