--- a/audio-catalog/index.html
+++ b/audio-catalog/index.html
@@ -36,6 +36,10 @@
           <li class="nav__item">
             <a href="#" class="nav__link">Profile</a>
           </li>
+          <li class="nav__item nav__item_user">
+            <span class="user__name">Username</span>
+            <div class="user__icon"></div>
+          </li>
         </ul>
       </nav>
 
