--- a/audio-catalog/search.html
+++ b/audio-catalog/search.html
@@ -6,15 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Audio Catalog</title>
 
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Lato:wght@700;900&display=swap"
       rel="stylesheet"
     />
 
+    <!-- CSS -->
     <link rel="stylesheet" href="styles/normalize.css" />
     <link rel="stylesheet" href="styles/index.css" />
-    <link rel="stylesheet" href="styles/browse.css" />
+    <link rel="stylesheet" href="styles/search.css" />
   </head>
   <body>
     <div class="container">
@@ -45,22 +47,11 @@
         </ul>
       </nav>
 
-      <section class="section">
-        <h2 class="section__title section__title_releases">New releases</h2>
-
-        <ul id="newReleases" class="releases"></ul>
-      </section>
-
-      <section class="section">
-        <h2 class="section__title section__title_playlists">
-          Featured playlists
-        </h2>
-
-        <ul id="featuredPlaylists" class="playlists"></ul>
-      </section>
+      <!-- Content goes here -->
     </div>
 
+    <!-- Custom JS -->
     <script src="scripts/index.js"></script>
-    <script src="scripts/browse.js"></script>
+    <script src="scripts/search.js"></script>
   </body>
 </html>
