--- a/audio-catalog/index.html
+++ b/audio-catalog/index.html
@@ -27,10 +27,10 @@
 
         <ul class="nav__menu">
           <li class="nav__item nav__item_active">
-            <a href="#" class="nav__link">Browse</a>
+            <a href="/index.html" class="nav__link">Browse</a>
           </li>
           <li class="nav__item">
-            <a href="#" class="nav__link">Search</a>
+            <a href="/search.html" class="nav__link">Search</a>
           </li>
           <li class="nav__item">
             <a href="#" class="nav__link">Library</a>
